# cryptofarm_web3

./: .gitignore  erc20.json  fun_starts_here.py  main_example.py  pyproject.toml
core/: get_wallets_data.py  settings.py  tx_manager.py
results/: fun_starts_here.txt
utils/: encrypt_wallets.py  generate_wallets.py  get_erc20_balance.py  get_wallet_balance.py
