[tool.poetry]
name = "web-3-farm"
version = "0.1.0"
description = ""
authors = ["Igor <Aleshichev.git@email.ua>"]
license = "0.1"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mnemonic = "^0.21"
bip-utils = "^2.9.3"
cryptography = "^45.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
