[tool.poetry]
name = "web-3-farm"
version = "0.1.0"
description = ""
authors = ["Igor <Aleshichev.git@email.ua>"]
license = "0.1"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mnemonic = "^0.21"
bip-utils = "^2.9.3"
cryptography = "^45.0.3"
web3 = "^7.12.0"
dotenv = "^0.9.9"
loguru = "^0.7.3"
primp = "^0.15.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
